<resources>
    <string name="app_name">Task1new</string>
    <!-- TODO: Remove or change this placeholder text -->


    // FragmentFR
    <string name="blank_fragment_FR_textView">Start fragment</string>
    <string name="blank_fragment_FR_button_RCV">Recycle view</string>
    <string name="blank_fragment_FR_button_NFR">Fragment</string>
    <string name="blank_fragment_FR_switch_text">Sorting is ascending order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //row_layout
    <string name="text_description">Text description</string>
    <string name="text_languages">Languages</string>
    <string name="text_title">Text title</string>
    <string name="icon_content_description">Icon for recycle view</string>

    //countries_menu
    <string name="countries_menu_ascending_sort">Ascending sort</string>
    <string name="countries_menu_descending_sort">Descending sort</string>
    <string name="countries_menu_item3">Item 3</string>
    <string name="countries_menu_item4">Item 4</string>

    //adapter
    <string name="adapter_name">Name: %1$s</string>
    <string name="adapter_distance">Distance: %1$s km</string>
    <string name="adapter_capital">Capital: %1$s</string>
    <string name="adapter_population">Population: %1$d </string>
    <string name="adapter_area">Area: %1$.1f km </string>
    <string name="adapter_languages">Languages: %1$s</string>
    <string name="ok">ok</string>
    <string name="startFragment_dialog_text">Dialog test</string>
    <string name="map_with_all_countries_button_text">Map with all countries</string>
    <string name="text_sample">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="fragmentCountry_note_text">Note</string>
    <string name="fragmentCountry_header_text">abc</string>
    <string name="customDialog_note_text">Note adjustment</string>
    <string name="custom_dialog_ok_button_text">OK</string>
    <string name="custom_dialog_entry_hint">Enter your note here</string>
    <string name="custom_dialog_cancel_button_text">CANCEL</string>
    <string name="area">Area</string>
    <string name="distance">Distance</string>

    //Filter
    <string name="filter_area">Countries area: %1$.1f - %2$.1f thousand km </string>
    <string name="filter_population">Countries population: %1$f - %2$f million people </string>
    <string name="filter_distance">Maximum distance: %1$.1f km </string>
    <string name="distance_to_countries">Distance to countries:</string>
    <string name="countries_population">Countries population:</string>
    <string name="countries_area">Countries area:</string>
    <string name="reset_filter">RESET FILTER</string>
    <string name="search">Search</string>
    <string name="error">ERROR</string>
    <string name="error_default">ERROR_DEFAULT</string>
    <string name="dialog_ok">DIALOG_OK</string>
    <string name="show_all_capitals">SHOW ALL CAPITALS</string>
    <string name="number">#</string>
    <string name="country_s_capital_name">Country\'s capital name</string>
    <string name="custom_like_bar_default_distance">3299km</string>
    <string name="custom_likebar_default_comments">4</string>
    <string name="custom_likebar_default_likes">123</string>
    <string name="foreground_channel_name">channel_name</string>
    <string name="foreground_channel_id">id</string>
    <string name="foreground_notification_name">name</string>

</resources>