<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.filter.FilterFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_fragment_button"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_row"
        android:textSize="@dimen/common_text_large"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distance_slider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_fragment_button_reset"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:textSize="@dimen/common_text_large"
        android:text="@string/reset_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/area_text_view"
        android:text="@string/countries_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/common_text_medium2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/area_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/area_text_view"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values"
        app:thumbColor="@color/teal_200"
        app:trackColorActive = "@color/teal_200"
        app:trackColorInactive = "@color/teal_row"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/population_text_view"
        android:text="@string/countries_population"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/common_text_medium2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/area_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/population_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/population_text_view"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values"
        app:thumbColor="@color/teal_200"
        app:trackColorActive = "@color/teal_200"
        app:trackColorInactive = "@color/teal_row"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/distance_text_view"
        android:text="@string/distance_to_countries"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/common_text_medium2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/population_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/distance_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/distance_text_view"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values"
        app:thumbColor="@color/teal_200"
        app:trackColorActive = "@color/teal_200"
        app:trackColorInactive = "@color/teal_row"
        />

</androidx.constraintlayout.widget.ConstraintLayout>