<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/sr_country_details"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:descendantFocusability="blocksDescendants">

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/country_name"
					android:layout_width="@dimen/zero_size"
					android:layout_height="wrap_content"
					android:textAlignment="center"
					android:textSize="@dimen/common_text_large"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:text="@string/fragmentCountry_header_text" />

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/note"
					android:layout_width="@dimen/zero_size"
					android:layout_height="wrap_content"
					android:textAlignment="center"
					android:textSize="@dimen/common_text_large"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/country_name"
					android:text="@string/fragmentCountry_note_text"
					android:textColor="@color/black"/>

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/iv_country_flag"
					android:layout_width="@dimen/country_flag_image_size"
					android:layout_height="@dimen/country_flag_image_size"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/note" />

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/appCompatTextView"
					android:layout_width="@dimen/zero_size"
					android:layout_height="wrap_content"
					android:text="@string/text_sample"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/iv_country_flag" />

				<com.google.android.gms.maps.MapView
					android:id="@+id/mv_country_details"
					android:layout_width="@dimen/zero_size"
					android:layout_height="@dimen/country_details_map_view_height"
					android:background="@color/black"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rv_country_details"
					android:layout_width="@dimen/zero_size"
					android:layout_height="wrap_content"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/mv_country_details" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.core.widget.NestedScrollView>
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

	<FrameLayout
		android:id="@+id/progressDetails"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible">
		<ProgressBar
			android:layout_width="@dimen/progress_size"
			android:layout_height="@dimen/progress_size"
			android:layout_gravity="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</FrameLayout>

</FrameLayout>